spin/mosthosts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    workload.user.cattle.io/workloadselector: deployment-mosthosts-mosthosts
  name: mosthosts
  namespace: mosthosts
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-mosthosts-mosthosts
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-mosthosts-mosthosts
    spec:
      containers:
      - image: rknop/mosthosts
        imagePullPolicy: Always
        name: mosthosts
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 95089
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /secrets
          name: mosthosts-secret
        - mountPath: /html
          name: htmldir
        - mountPath: /sessions
          name: sessionsdir
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 45703
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mosthosts-secret
        secret:
          defaultMode: 256
          optional: false
          secretName: mosthosts-secret
      - hostPath:
          path: /global/cfs/cdirs/desi/users/raknop/www_mosthosts/html
          type: Directory
        name: htmldir
      - hostPath:
          path: /global/cfs/cdirs/desi/users/raknop/www_mosthosts/sessions
          type: Directory
        name: sessionsdir
