spin/mosthosts-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosthosts-ingress
  namespace: mosthosts
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-mosthosts-mosthosts
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
