spin/mosthosts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosthosts-viewthing
  namespace: mosthosts
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workload.user.cattle.io/workloadselector: deployment-msothosts-mosthosts-viewthing
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
