spin/mosthosts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosthosts
  namespace: mosthosts
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
  - host: mosthosts.mosthosts.production.svc.spin.nersc.org
    http:
      paths:
      - backend:
          service:
            name: mosthosts-ingress
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: mosthosts.lbl.gov
    http:
      paths:
      - backend:
          service:
            name: mosthosts-ingress
            port:
              number: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mosthosts.lbl.gov
    secretName: mosthosts-cert
